--- a/styles.css
+++ b/styles.css
@@ -85,5 +85,27 @@ body {
 .item__info {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
+    
+}
+.item__info img{
+    width: 3rem;
+    height: 3rem;
+    border: 3px solid var(--back--secondary);
+    border-radius: 45px;
+}
+
+.item__doctor{
+    display: flex;
+    padding-top: 40px;
+}
+
+.item__doctor p{
+    padding-top: 10px;
+    padding-left: 9px;
+}
+
+.item__btn button{
+    padding: 10px 20px;
+    font-weight: bold;
 }
